Case-2/K8S/graphqlapi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: case2-graphqlapi-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphqlapi
  template:
    metadata:
      labels:
        app: graphqlapi
    spec:
      containers:
        - name: graphqlapi
          image: mystald/case2-graphqlapi:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: case2-graphqlapi-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: graphqlapi
  ports:
    - name: graphqlapi
      protocol: TCP
      port: 80
      targetPort: 80
